...
            "state" : "translated",
            "value" : "Bağlantı: %@"
          }
        }
      }
    },
    "Connections" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bağlantılar"
          }
...
            "state" : "translated",
            "value" : "Kuyruk boş"
          }
        }
      }
    },
    "Quick access" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hızlı erişim"
          }
...
            "state" : "translated",
            "value" : "Kaydırma Hızı:"
          }
        }
      }
    },
    "Search alias, HostName, User, or group" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alias, HostName, User veya grup ara"
          }
...
